--- a/produtos.html
+++ b/produtos.html
@@ -5,7 +5,7 @@
     <title>Aurora visual | Produtos</title>
     <script src="public/js/api.js"></script>
     <script src="public/js/produtos.js" defer></script>
-    <link rel="stylesheet" href="/css/styles.css"></link>
+    <link rel="stylesheet" href="public/css/styles.css"></link>
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/5021/5021672.png" type="image/png">
 </head>
 
