--- a/produtos.html
+++ b/produtos.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="form-produto">
-                <input type="number" id="precoProd" step="0.05" name="preco" placeholder=" " required />
+                <input type="number" id="precoProd" name="preco" placeholder=" " required />
                 <label for="precoProd">Preço</label>
             </div>
 
